# sail-api-services

./: .gitignore  LICENSE  Makefile  Readme.md  generators.sh  pyproject.toml  sail_dns_management_client-0.1.0-py3-none-any.whl  sailvm-cvm.json  sailvm.json  scripts.sh
app/: main.py
app/api/: accounts.py  audit.py  authentication.py  comment_chains.py  data_federations.py  data_federations_provisions.py  data_model_versions.py  data_models.py  data_models_dataframe.py  data_models_series.py  dataset_versions.py  datasets.py  emails.py  internal_utils.py  secure_computation_nodes.py
app/data/: operations.py
app/log/: __init__.py  audit_log.py
app/models/: accounts.py  audit.py  authentication.py  comment_chain.py  data_federations.py  data_model_dataframes.py  data_model_series.py  data_model_versions.py  data_models.py  dataset_versions.py  datasets.py  emails.py  secure_computation_nodes.py
app/utils/: azure.py  cache.py  logging.py
config/requirements/: all_requirements.txt  apiservices.txt  base.txt  prod_requirements.txt  tap.txt
docker/: Dockerfile  Entrypoint.sh  InitializationVector.json  promtail_local_config.yaml
models/: accounts.py  audit.py  authentication.py  data_federations.py  dataset_versions.py  datasets.py  emails.py  secure_computation_nodes.py
tests/database_initialization/: data_federation.py  scn_provision.py
tests/pydantic_tests/: test_accounts.py
tests/workflow_tests/: .gitignore  README.md  config.py  pytest.ini
tests/workflow_tests/api_portal/: account_management_api.py  azure_template_managment_api.py  (+6 more)
(+32 files in other folders)
